# EVO

./: .gitignore  Anchor.toml  CREATOR-QUICKSTART.md  Cargo.toml  EVOLVE-BUTTON-TASK.md  EVOLVED-STATE-TASK.md  EVO_Article.docx  FORGE-SUCCESS-TASK.md  HANDOFF-V2.md  HANDOFF-stephen-claude.md  HOLDER-FEEDBACK-ROUND2.md  PLATFORM-AUDIT-2026-07-21.md  POLISH-PASS.md  RARES-UI-AND-PORTFOLIO-TASK.md  README.md  SECURITY.md  START_HERE.md  TASK-2026-07-22-floor-semantics.md  TASK-2026-07-22-ui-cleanup.md  TX-EXPIRY-TASK.md  UX-ROADMAP.md  WHITEPAPER.md  fixed-manifest.json  generate_evo_article.py  kitties-manifest.json  package-lock.json  package.json  presentation.html  tsconfig.json
docs/: 01-concept.md  02-mechanics.md  03-art-system.md  04-economics.md  05-protocol.md  06-competitive-moat.md  07-comparison.md  08-roadmap.md  09-security-review.md  10-wallet-integration.md  11-hybrid-art-system.md  11-protocol-design-qa.md  11-protocol-design.md  architecture-audit.md  build-verification.txt  business.md  degen-trading-guide.md  emergency-response.md  evo-whitepaper.md  (+9 more)
programs/evo/: Cargo.toml
programs/evo/src/: constants.rs  errors.rs  lib.rs  utils.rs  vrf.rs
programs/evo/src/instructions/: buy.rs  close_collection.rs  commit_reveal.rs  create_collection.rs  delist.rs  evolve.rs  feed.rs  forge.rs  initialize.rs  list.rs  mod.rs  reveal_collection.rs  set_visual_stage.rs  shatter.rs  transfer.rs  update_creation_fee.rs  update_metadata.rs  update_treasury.rs  verify_merkle_proof.rs
programs/evo/src/state/: collection.rs  evo.rs  listing.rs  mod.rs  protocol.rs
(+77 files in other folders)
