[package]
name = "evo"
version = "0.1.0"
description = "EVO Protocol — Evolving Value Objects on Solana"
authors = ["naps (https://x.com/naps000)", "admiralfinest (https://x.com/admiralfinest)", "Benedict A."]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "evo"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"